--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </div>
         <img class="person-photo" src="img/person-photo.jpg" alt="John Johnson">
     </header>
-    <!--
+    
+
     <main>
         <div class="about-me">
             <h2>About me</h2>
@@ -102,5 +103,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
