--- a/index.html
+++ b/index.html
@@ -1,108 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="nav-block">
-            <a href="#" class="home-button">Home</a>
-            <a href="#">About Me</a>
-            <a href="#">Skills</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contacts</a>
-        </nav>
-        <hr>
-        <div class="person-about">
-            <div class="person-name">
-                <h1>John<br>Johnson</h1>
-            </div>
-            <div class="person-info">
-                <p>UX / UI Designer <br>24 years old, Lviv</p>
-            </div>
-            <nav class="language">
-                <a href="#" class="ua">UA</a>
-                <span> | </span>
-                <a href="#" class="eng">ENG</a>
-            </nav>
+      <nav class="nav-block" id="home">
+        <a href="#home" class="home-button">Home</a>
+        <a href="#about-me">About Me</a>
+        <a href="#skills">Skills</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contacts">Contacts</a>
+      </nav>
+      <a href="#home">
+        <section class="home-fixed">↑</section>
+      </a>
+      <hr />
+      <div class="person-about">
+        <div class="person-name">
+          <h1>John<br />Johnson</h1>
         </div>
-        <img class="person-photo" src="img/person-photo.jpg" alt="John Johnson">
+        <div class="person-info">
+          <p>UX / UI Designer <br />24 years old, Lviv</p>
+        </div>
+        <nav class="language">
+          <a href="#" class="ua">UA</a>
+          <span> | </span>
+          <a href="#" class="eng">ENG</a>
+        </nav>
+      </div>
+      <img class="person-photo" src="img/person-photo.jpg" alt="John Johnson" />
     </header>
-    
 
     <main>
-        <div class="about-me">
-            <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus porro nesciunt dolore expedita animi accusamus molestias accusantium commodi quae non nostrum, ab et enim eos, doloribus similique quam vero? Praesentium?</p>
+      <div class="about-me" id="about-me">
+        <h2>About me</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+          porro nesciunt dolore expedita animi accusamus molestias accusantium
+          commodi quae non nostrum, ab et enim eos, doloribus similique quam
+          vero? Praesentium?
+        </p>
+      </div>
+      <div class="skills" id="skills">
+        <h2>Skills</h2>
+        <p class="subheading">I work in such programs as</p>
+        <div class="program-cards">
+          <article class="card">
+            <img src="img/photoshop-icon.png" alt="Photoshop" class="icon" />
+            <p>Adobe<br />Photoshop</p>
+            <img
+              src="img/4-stars.png"
+              alt="Photoshop level 4 out of 5"
+              class="stars"
+            />
+          </article>
+          <article class="card">
+            <img src="img/illustator-icon.png" alt="Illustator" class="icon" />
+            <p>Adobe<br />Illustator</p>
+            <img
+              src="img/3-stars.png"
+              alt="Illustator level 3 out of 5"
+              class="stars"
+            />
+          </article>
+          <article class="card">
+            <img
+              src="img/after-effects-icon.png"
+              alt="After Effects"
+              class="icon"
+            />
+            <p>Adobe<br />After Effects</p>
+            <img
+              src="img/4-stars.png"
+              alt="After Effects level 4 out of 5"
+              class="stars"
+            />
+          </article>
+          <article class="card">
+            <img src="img/figma-icon.png" alt="Figma" class="icon" />
+            <p>Figma</p>
+            <img
+              src="img/4-stars.png"
+              alt="Figma level 4 out of 5"
+              class="stars"
+            />
+          </article>
         </div>
-        <div class="skills">
-            <h2>Skills</h2>
-            <p>I work in such programs as</p>
-            <div class="program-cards">
-                <article class="card">
-                    <img src="#" alt="Photoshop">
-                    <p>Adobe Photoshop</p>
-                    <img src="#" alt="Photoshop level 4 out of 5">
-                </article>
-                <article class="card">
-                    <img src="#" alt="Illustator">
-                    <p>Adobe Illustator</p>
-                    <img src="#" alt="Illustator level 3 out of 5">
-                </article>
-                <article class="card">
-                    <img src="#" alt="After Effects">
-                    <p>Adobe After Effects</p>
-                    <img src="#" alt="After Effects level 4 out of 5">
-                </article>
-                <article class="card">
-                    <img src="#" alt="Figma">
-                    <p>Figma</p>
-                    <img src="#" alt="Figma level 4 out of 5">
-                </article>
+      </div>
+      <div class="portfolio" id="portfolio">
+        <h2>Portfolio</h2>
+        <div class="carousel">
+          <div class="slides">
+            <div class="item">
+              <img src="img/store.png" alt="Fashion store" />
+              <p>Online fashion store - Homepage</p>
             </div>
-        </div>
-        <div class="portfolio">
-            <h2>Portfolio</h2>
-            <div class="my-works">
-                <article class="work">
-                    <img src="#" alt="Fashion store">
-                    <p>Online fashion store - Homepage</p>
-                </article>
-                <article class="work">
-                    <img src="#" alt="Reebok Store">
-                    <p>Reebok Store - Concept</p>
-                </article>
-                <article class="work">
-                    <img src="#" alt="Braun Landing Page">
-                    <p>Braun Landing Page - Concept</p>
-                </article>
+            <div class="item">
+              <img src="img/reebok.png" alt="Reebok store" />
+              <p>Reebok Store - Concept</p>
             </div>
+            <div class="item">
+              <img src="img/braun.png" alt="Braun landing page" />
+              <p>Braun Landing Page - Concept</p>
+            </div>
+          </div>
         </div>
+        <nav class="slider-btns">
+          <div class="prev-slide"><a>❮</a></div>
+          <div class="next-slide"><a>❯</a></div>
+        </nav>
+      </div>
     </main>
+
     <footer>
-        <div class="footer">
-            <div class="contacts">
-                <h2>Contacts</h2>
-                <p>Want to know more or just chat?<br>You're welcome!</p>
-                <a href="#" class="button">
-                    Send Message
-                </a>
-                <div class="social-media">
-                    <img src="#" alt="LinkedIn">
-                    <img src="#" alt="Instagram">
-                    <img src="#" alt="Behance">
-                    <img src="#" alt="Dribble">
-                </div>
-                <p class="small-contacts-text">
-                    Like me on<br>LinkedIn, Instagram, Behance, Dribble
-                </p>
-            </div>
+      <div class="contacts" id="contacts">
+        <h2>Contacts</h2>
+        <p>Want to know more or just chat?<br />You're welcome!</p>
+        <a href="#">
+          <section class="button">
+            <p>Send Message</p>
+          </section>
+        </a>
+        <div class="social-media">
+          <a href="https://linkedin.com/"
+            ><img
+              src="img/linkedin-icon.png"
+              alt="LinkedIn"
+              class="social-icon"
+          /></a>
+          <a href="https://instagram.com/"
+            ><img
+              src="img/instagram-icon.png"
+              alt="Instagram"
+              class="social-icon"
+          /></a>
+          <a href="https://behance.net/"
+            ><img src="img/behance-icon.png" alt="Behance" class="social-icon"
+          /></a>
+          <a href="https://dribbble.com/"
+            ><img src="img/dribble-icon.png" alt="Dribble" class="social-icon"
+          /></a>
         </div>
+        <p class="small-contacts-text">
+          Like me on<br />LinkedIn, Instagram, Behance, Dribble
+        </p>
+      </div>
     </footer>
-    <script src="script.js"></script>
-</body>
+  </body>
+  <script src="carousel.js"></script>
 </html>
