--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <hr />
       <div class="person-about">
         <div class="person-name">
-          <h1>John<br />Johnson</h1>
+          <h1>Ivan<br />Ivaniv</h1>
         </div>
         <div class="person-info">
           <p>UX / UI Designer <br />24 years old, Lviv</p>
@@ -31,6 +31,20 @@
           <a href="#" class="ua">UA</a>
           <span> | </span>
           <a href="#" class="eng">ENG</a>
+          <style>
+            .language .ua {
+               color: var(--add-color);
+            }
+
+            .language .ua:hover {
+              color: var(--main-color);
+              transition: 0.3s;
+            }
+
+            .language .eng {
+              color: var(--main-color);
+            }
+          </style>
         </nav>
       </div>
       <img class="person-photo" src="img/person-photo.jpg" alt="John Johnson" />
@@ -94,19 +108,20 @@
       </div>
       <div class="portfolio" id="portfolio">
         <h2>Portfolio</h2>
+        <p class="portfolio-p">Design</p>
         <div class="carousel">
           <div class="slides">
             <div class="item">
               <img src="img/store.png" alt="Fashion store" />
-              <p>Online fashion store - Homepage</p>
+              <p class="img-descr">Online fashion store - Homepage</p>
             </div>
             <div class="item">
               <img src="img/reebok.png" alt="Reebok store" />
-              <p>Reebok Store - Concept</p>
+              <p class="img-descr">Reebok Store - Concept</p>
             </div>
             <div class="item">
               <img src="img/braun.png" alt="Braun landing page" />
-              <p>Braun Landing Page - Concept</p>
+              <p class="img-descr">Braun Landing Page - Concept</p>
             </div>
           </div>
         </div>
@@ -114,6 +129,7 @@
           <div class="prev-slide"><a>❮</a></div>
           <div class="next-slide"><a>❯</a></div>
         </nav>
+        <p class="portfolio-p ">Sites</p>
       </div>
     </main>
 
