--- a/learning/portfolio/index.html
+++ b/learning/portfolio/index.html
@@ -164,7 +164,7 @@
           /></a>
         </div>
         <p class="small-contacts-text">
-          Like me on<br />LinkedIn, Instagram, Behance, Dribble
+          Like me on<br />LinkedIn, Instagram, Behance, Dribbble
         </p>
       </div>
     </footer>
