--- a/index-ua.html
+++ b/index-ua.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,11 +10,11 @@
   <body>
     <header>
       <nav class="nav-block" id="home">
-        <a href="#home" class="home-button">Home</a>
-        <a href="#about-me">About Me</a>
-        <a href="#skills">Skills</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contacts">Contacts</a>
+        <a href="#home" class="home-button">Головна</a>
+        <a href="#about-me">Про мене</a>
+        <a href="#skills">Навички</a>
+        <a href="#portfolio">Портфоліо</a>
+        <a href="#contacts">Зв'язатись</a>
       </nav>
       <a href="#home">
         <section class="home-fixed">↑</section>
@@ -22,26 +22,26 @@
       <hr />
       <div class="person-about">
         <div class="person-name">
-          <h1>Ivan<br />Ivaniv</h1>
+          <h1>Іван<br />Іванів</h1>
         </div>
         <div class="person-info">
-          <p>UX / UI Designer <br />24 years old, Lviv</p>
+          <p>UX / UI дизайнер <br />24 роки, Львів</p>
         </div>
         <nav class="language">
           <a href="#" class="ua">UA</a>
           <span> | </span>
-          <a href="#" class="eng">ENG</a>
+          <a href="index.html" class="eng">ENG</a>
           <style>
-            .language .ua {
+            .language .eng {
                color: var(--add-color);
             }
 
-            .language .ua:hover {
+            .language .eng:hover {
               color: var(--main-color);
               transition: 0.3s;
             }
 
-            .language .eng {
+            .language .ua {
               color: var(--main-color);
             }
           </style>
@@ -52,7 +52,7 @@
 
     <main>
       <div class="about-me" id="about-me">
-        <h2>About me</h2>
+        <h2>Про мене</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
           porro nesciunt dolore expedita animi accusamus molestias accusantium
@@ -61,8 +61,8 @@
         </p>
       </div>
       <div class="skills" id="skills">
-        <h2>Skills</h2>
-        <p class="subheading">I work in such programs as</p>
+        <h2>Навички</h2>
+        <p class="subheading">Я працюю в наступних програмах:</p>
         <div class="program-cards">
           <article class="card">
             <img src="img/photoshop-icon.png" alt="Photoshop" class="icon" />
@@ -107,21 +107,21 @@
         </div>
       </div>
       <div class="portfolio" id="portfolio">
-        <h2>Portfolio</h2>
-        <p class="portfolio-p">Design</p>
+        <h2>Портфоліо</h2>
+        <p class="portfolio-p">Дизайн</p>
         <div class="carousel">
           <div class="slides">
             <div class="item">
               <img src="img/store.png" alt="Fashion store" />
-              <p class="img-descr">Online fashion store - Homepage</p>
+              <p class="img-descr">Головна сторінка магазину одягу</p>
             </div>
             <div class="item">
               <img src="img/reebok.png" alt="Reebok store" />
-              <p class="img-descr">Reebok Store - Concept</p>
+              <p class="img-descr">Концепт магазину Reebok</p>
             </div>
             <div class="item">
               <img src="img/braun.png" alt="Braun landing page" />
-              <p class="img-descr">Braun Landing Page - Concept</p>
+              <p class="img-descr">Концепт головної сторінки Braun</p>
             </div>
           </div>
         </div>
@@ -130,17 +130,16 @@
           <div class="next-slide"><a>❯</a></div>
         </nav>
         <p class="portfolio-p ">Sites</p>
-        <a href="movie-picker.html">Movie picker</a>
       </div>
     </main>
 
     <footer>
       <div class="contacts" id="contacts">
-        <h2>Contacts</h2>
-        <p>Want to know more or just chat?<br />You're welcome!</p>
+        <h2>Зв'язатись</h2>
+        <p>Виникли питання абощо?</p>
         <a href="#">
           <section class="button">
-            <p>Send Message</p>
+            <p>Надіслати повідомлення</p>
           </section>
         </a>
         <div class="social-media">
@@ -164,7 +163,7 @@
           /></a>
         </div>
         <p class="small-contacts-text">
-          Like me on<br />LinkedIn, Instagram, Behance, Dribbble
+          Я на<br />LinkedIn, Instagram, Behance, Dribble
         </p>
       </div>
     </footer>
