--- a/movie-picker.html
+++ b/movie-picker.html
@@ -17,8 +17,11 @@
     </div>
     <div class="map">
         <div class="seat-example occupied"></div>
+        <p>Зайняті</p>
         <div class="seat-example bought"></div>
+        <p>Вибрані</p>
         <div class="seat-example"></div>
+        <p>Вільні</p>
     </div>
     <div class="screen">
         <p>Екран</p>
