Media responsive added and css completed

--- a/learning/portfolio/index.html
+++ b/learning/portfolio/index.html
@@ -19,13 +19,13 @@
       <a href="#home">
         <section class="home-fixed">↑</section>
       </a>
-      <hr />
+      <hr / class="nav-line">
       <div class="person-about">
         <div class="person-name">
           <h1>Ivan<br />Ivaniv</h1>
         </div>
         <div class="person-info">
-          <p>UX / UI Designer <br />24 years old, Lviv</p>
+          <p>UX / UI Designer & <br> Front-end developer<br />24 years old, Lviv</p>
         </div>
         <nav class="language">
           <a href="#" class="ua">UA</a>
@@ -130,7 +130,8 @@
           <div class="next-slide"><a>❯</a></div>
         </nav>
         <p class="portfolio-p ">Sites</p>
-        <a href="movie-picker.html">Movie picker</a>
+        <img src="img/movie-chooser.png" alt="Movie chooser site" class="movie-image">
+        <a href="movie-picker.html" class="movie-link">Movie picker</a>
       </div>
     </main>
 
