--- a/learning/portfolio/movie-picker.html
+++ b/learning/portfolio/movie-picker.html
@@ -8,10 +8,10 @@
     <title>Movie Picker</title>
 </head>
 <body>
-    <h1>Pick your seats</h1>
+    <h1>Оберіть місця:</h1>
     <div class="choose-movie">
-        <label>Film:</label>
-        <select id="movie-chooser">
+        <label>Фільм:</label>
+        <select id="movie-chooser" class="unselectable">
             <option value="">DA</option>
         </select>
     </div>
@@ -83,8 +83,8 @@
         <p>Ви купили 0 квитків на суму 0 грн</p>
     </div>
     <form class="make-order">
-        <p>Ім'я: <input type="text" name="username" required></p>
-        <p>E-mail: <input type="email" name="useremail" required></p>
+        <input type="text" name="username" class="input-field" placeholder="Name" required>
+        <input type="email" name="useremail" class="input-field" placeholder="E-mail" required>
         <input type="submit" value='Купити' class='submit-btn'>
     </form>
     <script src="choose-film.js"></script>
